Split the compat_50 module into two, separating the QUOTA-related stuff from the rest of the module.  This allows loading of the (main) compat_50 module on kernels that don't include ``options QUOTA''.

Welcome to 9.99.40 !

Addresses PR kern/54875